<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:icon="@drawable/ic_touch_app_24dp"
        app:fragment="tech.ravensoftware.chat.ui.fragment.settings.InterfaceSettingsFragment"
        app:title="@string/pref_title_interface" />
    <Preference
        android:icon="@drawable/ic_privacy_tip_24dp"
        app:fragment="tech.ravensoftware.chat.ui.fragment.settings.PrivacySettingsFragment"
        app:summary="@string/pref_privacy_summary"
        app:title="@string/pref_privacy" />
    <Preference
        android:icon="@drawable/ic_notifications_24dp"
        android:summary="@string/pref_notifications_summary"
        android:title="@string/notifications"
        app:fragment="tech.ravensoftware.chat.ui.fragment.settings.NotificationsSettingsFragment" />
    <Preference
        android:icon="@drawable/ic_attachment_24dp"
        android:summary="@string/pref_attachments_summary"
        android:title="@string/pref_attachments"
        app:fragment="tech.ravensoftware.chat.ui.fragment.settings.AttachmentsSettingsFragment" />
    <Preference
        android:icon="@drawable/ic_archive_24dp"
        android:key="backup"
        android:summary="@string/pref_backup_summary"
        android:title="@string/backup"
        app:fragment="tech.ravensoftware.chat.ui.fragment.settings.BackupSettingsFragment" />
    <Preference
        android:key="about"
        android:title="@string/title_activity_about_x">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="tech.ravensoftware.chat.ui.AboutActivity"
            android:targetPackage="@string/applicationId" />
    </Preference>
</PreferenceScreen>