<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/empty_chat_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="48dp">

            <ImageView
                android:id="@+id/empty_chat_hint_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_forum_thin_48dp"
                app:tint="?colorPrimaryFixedDim" />

            <TextView
                android:id="@+id/empty_chat_hint_text"
                style="?textAppearanceBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_chat_hint_image"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/empty_chat_list_hint" />

            <TextView
                android:id="@+id/empty_chat_rms_number"
                style="?textAppearanceBodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_chat_hint_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/empty_chat_rms_explanation"
                style="?textAppearanceBodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_chat_rms_number"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/empty_chat_rms_explanation" />
        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:text="@string/start_chat"
            app:icon="@drawable/ic_chat_24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>